// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete fail 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "bodyText": [Function],
    "cancelDeleteProject": [Function],
    "dataLoaded": true,
    "dataSaving": true,
    "deleteProject": [Function],
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <li>
     <a href=\\"/\\">Test</a>
   </li>
   <!--0-->
   <!--0-->
   <li>Delete</li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <div class=\\"modal\\">
   <div class=\\"content\\">
     <div class=\\"header\\">Delete project</div>
     <div class=\\"body\\">Do you want delete project \\"Test\\"?</div>
     <div class=\\"footer\\">
       <button class=\\"ok danger\\" disabled=\\"\\"><span>Confirm</span></button>
       <button class=\\"cancel\\"><span>Cancel</span></button>
     </div>
   </div>
 </div>
 <!--0-->
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`render errors 1`] = `
Object {
  "Options": Object {
    "bodyText": [Function],
    "dataLoaded": true,
    "dataSaving": false,
    "errors": Array [
      "Load project fail!",
    ],
    "project": Object {
      "chains": Array [],
    },
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li></li>
 </ul>
 <!--0-->
 <!--0-->
 <ul class=\\"errors-panel\\">
   <li>Load project fail!</li>
 </ul>
 <!--0-->
 <!--0-->
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "bodyText": [Function],
    "dataLoaded": false,
    "dataSaving": false,
    "errors": Array [],
    "project": Object {},
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li></li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;
